; ModuleID = '/home/carl/AnghaBench/linux/kernel/trace/extr_trace.c_trace_array_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/trace/extr_trace.c_trace_array_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_array = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@event_mutex = common dso_local global i32 0, align 4
@trace_types_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @trace_array_destroy(%struct.trace_array* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.trace_array*, align 8
  %4 = alloca i32, align 4
  store %struct.trace_array* %0, %struct.trace_array** %3, align 8
  %5 = load %struct.trace_array*, %struct.trace_array** %3, align 8
  %6 = icmp ne %struct.trace_array* %5, null
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @EINVAL, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %2, align 4
  br label %18

10:                                               ; preds = %1
  %11 = call i32 @mutex_lock(i32* @event_mutex)
  %12 = call i32 @mutex_lock(i32* @trace_types_lock)
  %13 = load %struct.trace_array*, %struct.trace_array** %3, align 8
  %14 = call i32 @__remove_instance(%struct.trace_array* %13)
  store i32 %14, i32* %4, align 4
  %15 = call i32 @mutex_unlock(i32* @trace_types_lock)
  %16 = call i32 @mutex_unlock(i32* @event_mutex)
  %17 = load i32, i32* %4, align 4
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %10, %7
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @__remove_instance(%struct.trace_array*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
